--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "api"]
 	path = api
-	url = https://github.com/dpeite/time-for-vbus-api
+	url = https://github.com/dpeite/time-for-vbus-api.updates_for_telegram
