Quitado pymongolab de requirements.txt y añadido la libreria de forma manual debido a un bug

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ requests-toolbelt
 requests
 six==1.9.0
 suds-jurko
-pymongo
-pymongolab
+# pymongo # In appengine pymongo not work use pymongolab
+# Not install pymongolab because has a bug, the library it's already in this repository
+# pymongolab
